# skinwalker

./: ASCIIWALKER_STANDALONE_SPEC.md  ASCII_TEXT_TUI_SPEC.md  IMAGE_TO_ASCII_STANDALONE_SPEC.md  README.md  ROADMAP.md  SKINWALKER_UPGRADE_PLAN.md  install.zsh  patch-hermes.zsh  pyproject.toml
files/: skinwalker
files/hermes-runtime-patch/: cli.py  run_agent.py
files/hermes-runtime-patch/agent/: display.py
skills/: smux
src/imagewalker/: __main__.py  app.py  engine.py  export.py  gradients.py
src/skinwalker/: __main__.py  ai.py  app.py  art.py  fonts.py  hermes.py  history.py  model.py  preview.py
tests/: test_ai.py  test_art.py  test_fonts.py  test_hermes.py  test_model.py
